<resources>
    <string name="app_name">BloodCare</string>
    <string name="title_activity_login">Sign in</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="achiev">Donation Info</string>

    <!-- Strings related to login -->
    <string name="signup">Register</string>
    <string name="prompt_email">Email</string>
    <string name="register">Create an account</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="reset">Reset</string>
    <string name="displayName">Full Name</string>
    <string name="mobile">Mobile No</string>
    <string name="userAddress">Address</string>
    <string name="nearH">Find Nearest Hospitals</string>
    <string name="fndBlood">Find Blood Donor</string>
    <string name="lgout">Log out</string>
    <string name="devinfo">About us</string>
    <string name="bloodinfo">Blood Info</string>


    <string-array name="division_list">
        <item>Bhiwadi</item>
        <item>Rewari</item>
        <item>Gurugram</item>
        <item>Dharuhera</item>
        <item>Delhi</item>
        <item>Faridabad</item>
        <item>Ghaziabad</item>
        <item>Manesar</item>
    </string-array>
    <string-array name="doctors_list">
        <item>Mr.Sanjay Kumar</item>
        <item>Mr.Vijay Reddy</item>
        <item>Ms.Shamita Oberoi</item>
        <item>Ms.Shambhavi Pathak</item>
        <item>Mr.RS Shetty</item>
        <item>Mr.Rowdy Rathore</item>
        <item>Ms. Ankita Sharma</item>
    </string-array>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="Blood_Group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>

    <string name="eligibility_">Eligibility Requirements</string>
    <string name="female_">For Females:\n   Age: 17 Years\n   Height: 5ft 5inch\n   Weight: 55 KG\n   Healthy and Feeling</string>
    <string name="male_">For Males:\n   Age: 17 Years\n   Height: 5ft 1inch\n   Weight: 50 KG\n    Healthy and Feeling</string>
    <string name="info_">Giving blood saves lives. The blood you give is a lifeline in an emergency and for people who need long-term treatments. Many people would not be alive today if donors had not generously given their blood. \n\nWhy we need you to give blood?\n\n We need over 6000 blood donations every day to treat patients in need for people to give blood.\n\nEach year we need approximately 200000 new donors, as some donors can no longer give blood.Most people between ages of 17-65 are able to give blood. Around half our current donors are over 45.That is why we need more young people to start giving blood.</string>
    <string name="aboutus">BLOODCARE Android Application is an application made to facilitate the need of Blood Donation for those willing to Donate and/or Receive Blood.\n</string>
    <string name="dev">Name: BloodCare Group\nPhone No: 9999999999\nEmail: bloodcare_1@gmail.com </string>
    <string name="find_nearest_doctors">Find Nearest Doctors</string>

</resources>
