<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_button_bg"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".activities.ProfileActivity">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="40dp"
            android:background="@drawable/circle"
            android:src="@drawable/logo_blood" />


        <LinearLayout
            android:padding="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Name:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="17dp"
                android:textColor="@color/primary_dark"/>
            <EditText
                android:layout_marginLeft="52dp"
                android:id="@+id/input_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/displayName"
                android:inputType="text"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sex:"
                android:textStyle="bold"
                android:textSize="17dp"
                android:textColor="@color/primary_dark"/>

            <Spinner
                android:id="@+id/gender"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="67dp"
                android:layout_weight="1"
                android:entries="@array/gender">

            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blood Group:"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/primary_dark"/>

            <Spinner
                android:layout_marginLeft="13dp"
                android:id="@+id/inputBloodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/Blood_Group">

            </Spinner>
        </LinearLayout>

    <LinearLayout
        android:padding="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact No:"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="@color/primary_dark"/>

        <EditText
            android:layout_marginLeft="20dp"
            android:id="@+id/inputMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:inputType="text"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:padding="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address:"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="@color/primary_dark"/>
        <EditText
            android:layout_marginLeft="40dp"
            android:id="@+id/inputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userAddress"
            android:inputType="text"
            android:textColor="@android:color/black" />
    </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Division:"
                android:textStyle="bold"
                android:textSize="17dp"
                android:textColor="@color/primary_dark"/>

            <Spinner
                android:layout_marginLeft="42dp"
                android:id="@+id/inputDivision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/division_list">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email:"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="@color/primary_dark"/>
        <EditText
            android:layout_marginLeft="52dp"
            android:id="@+id/input_userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            />
        </LinearLayout>
    <LinearLayout
        android:padding="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password:"
            android:textStyle="bold"
            android:textSize="17dp"
            android:textColor="@color/primary_dark"/>
        <EditText
            android:layout_marginLeft="42dp"
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"/>
    </LinearLayout>
        <EditText
            android:layout_marginLeft="135dp"
            android:id="@+id/input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/questions"
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textColor="@color/colorPrimary"
            android:textSize="27dp"
            android:text="Here are some questions to Register"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.Do you have Diabetes?"
            android:textStyle="bold"
            android:textSize="18dp"/>
        <CheckBox
            android:id="@+id/opt"
            android:text="Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/opt1"
            android:text="No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2. Ever a lung or Heart patient?"
            android:textStyle="bold"
            android:textSize="18dp"/>
        <CheckBox
            android:id="@+id/opt2"
            android:text="Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/opt3"
            android:text="No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3. Positive for HIV/AIDS?"
            android:textStyle="bold"
            android:textSize="18dp"/>
        <CheckBox
            android:id="@+id/opt4"
            android:text="Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/opt5"
            android:text="No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.Ever had Cancer?"
            android:textStyle="bold"
            android:textSize="18dp"/>
        <CheckBox
            android:id="@+id/opt6"
            android:text="Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/opt7"
            android:text="No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5. Had any Vaccination in last 3 months?"
            android:textStyle="bold"
            android:textSize="18dp"/>
        <CheckBox
            android:id="@+id/opt8"
            android:text="Yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/opt9"
            android:text="No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <CheckBox
            android:id="@+id/checkbox"
            android:text="I want to be a Donor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/signin_btn"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="#FFFFFF" />


    </LinearLayout>

</ScrollView>